[package]
name = "community-crawler"
version = "0.1.0"
authors = ["Marcel <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
scraper = "0.11.0"
pnet = "0.25.0"
rand = "0.3.15"
ipnet = "2.3.0"
pnet_macros_support = "0.25.0"
dns-lookup = "1.0.2"
reqwest = { version = "0.10" }
async-recursion = "0.3"

# TODO make this optional for selfhosting
tantivy = "0.12.0"
